type Entity = {
  id: number | null,
};

export default Entity;
