@startuml
'https://plantuml.com/class-diagram

class Entity {
    {abstract} + save()
}

class Product {
    + id: int
    + type: string
    + startDate: Date
    + price: int
}

class Contract {
    + id: int
    + money: int
}

Entity <|-- Contract
Entity <|-- Product
Contract "1..*" *-right-> Product

@enduml
